# basic-s3-object-lambda-hello

./: Cargo.toml  README.md
src/: main.rs
