[package]
name = "basic-s3-object-lambda-hello"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = "0.8.3"
lambda_runtime = "0.7.3"
serde = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.1"
mime = "0.3.16"
async-trait = "0.1.66"
ureq = "2.6.2"
aws-smithy-http = "0.55.0"

[dev-dependencies]
mockall = "0.11.3"
tokio-test = "0.4.2"
